# prompt-to-json-backend

./: .env.example  .gitignore  API_CONTRACT.md  API_STATUS.md  AUTHENTICATION_UPDATE.md  CHANGELOG.md  DEPLOYMENT.md  DEPLOYMENT_RELEASE.md  DEPLOYMENT_STATUS.md  DOCKER_FIX.md  DOCKER_SETUP.md  Dockerfile  Dockerfile.simple  FINAL_PROJECT_STATUS.md  FINAL_SUMMARY.md  HIDG_LOGS.md  IMPORT_FIXES_SUMMARY.md  PRODUCTION_README.md  PRODUCTION_STATUS.md  PROJECT_STRUCTURE.md  README.md  RENDER_DEPLOYMENT.md  TASK5_REPORT.md  advanced_demo.py  advanced_rl.py  agent_coordinator.py  alembic.ini  api_server.py  app.py  auth.py  benchmark.py  cache.py  cli_tools.py  config.py  create-tables.py  daily_logger.py  data_scorer.py  database_integration.py  db_query.py  demo_pipeline.py  (+50 more)
alembic/: env.py
archive/: README.md
config/: .env.docker  render.yaml
db/: __init__.py  database.py  interface.py  iteration_models.py  models.py
deployment/: Dockerfile  docker-compose.dev.yml  start.sh
docker/: Dockerfile  docker-compose.yml
docs/: api.md  api_contract.md  demo_instructions.md  testing_guide.md
documentation/: DOCKER_QUICK_START.md  INTEGRATION_COMPLETE.md  PRODUCTION_COMPLETE.md  PRODUCTION_STATUS.md  README.md  RENDER_DEPLOYMENT.md  TASK5_REPORT.md  ci-sample-log.md
envs/: simple_spec_env.py
evaluations/: 2025-09-10T12-16-25_fdd18d14.json  2025-09-10T12-16-30_cbc0fc8e.json  2025-09-10T12-16-38_0900abe8.json
evaluator/: __init__.py  criteria.py  evaluator_agent.py  feedback.py  report.py
examples/: sample_outputs.json  sample_prompts.txt
feedback/: feedback_agent.py  feedback_loop.py
load-tests/: README.md  run_load_tests.bat
logs/: advanced_rl_training_20250911_153202.json  advanced_rl_training_20250912_111245.json  advanced_rl_training_20250912_111304.json  advanced_rl_training_20250912_111316.json  advanced_rl_training_20250912_112035.json  advanced_rl_training_20250912_130905.json  advanced_rl_training_20250912_130936.json  advanced_rl_training_20250912_142007.json  advanced_rl_training_20250912_142021.json  advanced_rl_training_20250912_142624.json  advanced_rl_training_20250916_123337.json  feedback_log.json  interaction_logs.jsonl  iteration_logs.json  llm_logs.jsonl  logs.json  rl_training_20250911_121447.json  rl_training_20250911_122822.json  rl_training_20250911_122849.json  rl_training_20250911_122908.json  rl_training_20250911_122935.json  rl_training_20250911_123020.json  rl_training_20250911_123057.json  rl_training_20250911_130923.json  rl_training_20250911_131001.json  rl_training_20250911_131037.json  rl_training_20250911_132854.json  rl_training_20250911_133557.json  rl_training_20250911_133816.json  rl_training_20250911_133847.json  rl_training_20250911_135104.json  rl_training_20250911_140447.json  rl_training_20250911_141632.json  rl_training_20250911_141645.json  (+9 more)
production/: utils.py  (+3 more)
(+364 files in other folders)
