[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-to-json-backend"
version = "2.1.1"
description = "Universal AI Design System - Production-ready FastAPI backend supporting all design types"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["fastapi", "ai", "design", "universal", "api", "backend", "production"]

[project.urls]
Homepage = "https://prompt-to-json-backend.onrender.com"
Documentation = "https://prompt-to-json-backend.onrender.com/docs"
Repository = "https://github.com/anmolmishra307680-pixel/prompt-to-json-backend"
"Bug Tracker" = "https://github.com/anmolmishra307680-pixel/prompt-to-json-backend/issues"

[tool.pylance]
extraPaths = ["./src"]

[tool.pyright]
extraPaths = ["./src"]
pythonPath = "python"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["testing/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "api: marks tests as API tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*Protocol\\):",
    "@\\(abc\\\.\\)\\?abstractmethod",
]

[tool.ruff]
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "NPY", "RUF"]
ignore = ["E501", "S101", "S311", "PLR0913", "PLR0915"]
line-length = 120
target-version = "py38"

[tool.ruff.per-file-ignores]
"testing/**" = ["S101", "PLR2004", "S106"]
"src/db/models.py" = ["A003"]
"src/main_api.py" = ["B008"]